<resources>
    <string name="app_name">Polutan App</string>
    <string name="polutan">POLUTAN</string>
    <string name="sub_title">Login ke akun POLUTAN Anda</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="lupa_password">Lupa password?</string>
    <string name="login">Login</string>
    <string name="belum_punya_akun">Belum punya akun ?</string>
    <string name="register">Register</string>
    <string name="sub_title_register">Buat akun POLUTAN sekarang</string>
    <string name="full_name">Nama Lengkap</string>
    <string name="phone_number">No. Telp</string>
    <string name="have_account">Sudah Punya Akun?</string>
    <string name="your_current_location">Lokasimu saat ini</string>
    <string name="detail_current_location">DKI Jakarta</string>
    <string name="district_current_location">Jakarta Pusat, Indonesia</string>
    <string name="current_aqi">41</string>
    <string name="aqi">AQI</string>
    <string name="current_name_aqi">Moderate</string>
    <string name="pm25">PM2.5</string>
    <string name="current_pm25">32µg/m³</string>
    <string name="how_to_prevenet">Bagaimana cara melindungi diri\ndari polusi udara yang buruk?</string>
    <string name="use_mask">Gunakan\nMasker</string>
    <string name="user_air_purifier">Gunakan\nAir Purifier</string>
    <string name="use_sun_sreen">Gunakan\nSunScreen</string>
    <string name="close_window">Tutup Jendela\nRumah</string>
    <string name="dont_go_out">Hindari Aktivitas\nLuar Rumah</string>
    <string name="another_city">Kota Lainnya</string>
    <string name="list_all_city">Lihat Semua</string>
    <string name="city_name">Jakarta Barat</string>
    <string name="time">2 menit yang lalu</string>
    <string name="title_home">Home</string>
    <string name="title_air_quality">Air Quality</string>
    <string name="title_about_us">About Us</string>
    <string name="title_setting">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="aqi_guide">AQI Guide</string>
    <string name="category_good">0 - 50 Good</string>
    <string name="description_category_good">Air Quality is satisfaction and poses\nlittle or no risk. Ventilating your home is\nrecommended</string>
    <string name="category_moderate">51 - 100 Moderate</string>
    <string name="description_moderate">Sensitive individuals should avoid outdoor\nactivity as they may experience respiratory\nsymptoms</string>
    <string name="category_unhealthy_for_sensitive_groups">101 - 105 Unhealthy for sensitive groups</string>
    <string name="description_unhealthy_for_sensitive_groups">General public and sensitive individuals in\nparticular are at risk to experience irritation\nand respiratory problems.</string>
    <string name="category_unhealthy">151 - 200 Unhealthy</string>
    <string name="description_unhealthy">Increased likelihood of advese affects and\naggravation to the heart and lungs among\ngeneral public - particulary for sensitivie\ngroups.</string>
    <string name="category_very_unhealthy">201 - 300 Very Unhealthy</string>
    <string name="what_is_polutan">What is Polutan ?</string>
    <string name="about_us_description">Polutan or Air Quality prediction/forecast application \nis an mobile android application that we have created to help users know the level of air quality, so they can prepare themselves for protection against it. Departing from our awareness of the importance or number of outdoor activities that require the body to be in an open environment, therefore it is very important to know the level of air quality in the environment, such as masks, skin products(such us sunscreen, etc), and others. On the main page the application can display and predict the level of air pollution in a particular city\'s air quality history. In addition to displaying the level of air pollution, it also displays the air quality index(number value of the air quality index, i.e 0 - 500) and the main pollutant (main pollution type e.g PM2.5); displays today\'s air quality forecast, and displays health recommendations (e.g close window if the air quality is unhealthy, enjoy outdoor activities,etc).</string>
    <string name="title_activity_list_all_city">ListAllCityActivity</string>
    <string name="title_search">Search</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="dark_mode">Dark Mode</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_theme">Theme</string>
    <string name="title_log_out">Logout</string>
    <string name="reset_password">Reset Password</string>
    <string name="cancel">Cancel</string>
    <string name="under_construction">This Feature is under construction</string>
</resources>