<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="5dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="5dp"
    android:orientation="vertical"
    app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/icon_city"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_city_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/city_name" />

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/time" />

        <View
            android:id="@+id/view_underline"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:background="@color/gray_for_underline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_city_name" />

        <TextView
            android:id="@+id/tv_aqi_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/roboto_semi_bold"
            android:textColor="@color/gray_2"
            android:textSize="42sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_underline"
            tools:text="@string/current_aqi" />

        <TextView
            android:id="@+id/tv_text_aqi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/aqi"
            android:textColor="@color/gray_2"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toEndOf="@+id/tv_aqi_number"
            app:layout_constraintTop_toTopOf="@+id/tv_aqi_number" />

        <TextView
            android:id="@+id/tv_category_aqi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/gray_2"
            android:fontFamily="@font/roboto_medium"
            android:textSize="22sp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/view_underline"
            tools:text="@string/current_name_aqi" />

        <TextView
            android:id="@+id/tv_cardview_pm25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_reguler"
            android:text="@string/pm25"
            android:textColor="@color/gray_2"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/tv_category_aqi"
            app:layout_constraintTop_toBottomOf="@+id/tv_category_aqi" />

        <TextView
            android:id="@+id/tv_cardview_current_aqi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_reguler"
            android:textColor="@color/gray_2"
            android:textSize="14sp"
            android:layout_marginStart="8sp"
            app:layout_constraintStart_toEndOf="@+id/tv_cardview_pm25"
            app:layout_constraintTop_toBottomOf="@+id/tv_category_aqi"
            tools:text="@string/current_pm25" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>