<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_about_us"
    tools:context=".ui.AboutUsFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_about_us"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/title_about_us" />


    <TextView
        android:id="@+id/tv_what_is_polutan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/what_is_polutan"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_about_us" />

    <TextView
        android:id="@+id/tv_description_about_us"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/about_us_description"
        android:textSize="16sp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_what_is_polutan" />


</androidx.constraintlayout.widget.ConstraintLayout>